[package]
name = "fondos"
version = "0.1.0"
authors = ["Fabio A. Correa Duran <facorread@gmail.com>"]
description = "Management of private investments"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.2"
serde = "1.0"
