[package]
name = "fondos"
version = "0.1.0"
authors = ["Fabio A. Correa Duran <facorread@gmail.com>"]
description = "Management of private investments"
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2"
chrono = { version = "0.4", features = ["serde"] }
plotters = "0.2"
serde = { version = "1.0", features = ["derive"] }
